# laget-cli

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
laget_cli/: __init__.py  cli.py  errors.py  paths.py  session.py
laget_cli/api/: __init__.py  calendar.py  news.py  normalize.py  notifications.py  teams.py
tests/: test_api.py  test_calendar.py  test_cli.py  test_cli_filters.py  test_news.py  test_normalize.py  test_notifications.py  test_session.py
