[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "laget-cli"
version = "0.1.0"
description = "An unofficial, agent-friendly CLI for laget.se."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
completion = ["argcomplete>=3.0"]

[project.scripts]
laget = "laget_cli.cli:main"

[project.urls]
Homepage = "https://github.com/daxro/laget-cli"
Repository = "https://github.com/daxro/laget-cli"
Issues = "https://github.com/daxro/laget-cli/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
